--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com"
+    "url": "https://github.com/kaplanke/mtxn-sequelize"
   },
   "keywords": [
     "multiple",
@@ -27,11 +27,10 @@
     "multiple-transaction-manager": "file:../mtxn/dist/multiple-transaction-manager-1.0.1.tgz",
     "sequelize": "6.20.0",
     "yesql": "5.0.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "@types/uuid": "8.3.4"
   },
   "devDependencies": {
-    "@types/uuid": "8.3.4",
-    "@types/pg": "8.6.5",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "jest": "^28.1.0",
