--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@log4js-node/log4js-api": "1.0.2",
     "multiple-transaction-manager": "file:../mtxn/dist/multiple-transaction-manager-1.0.1.tgz",
-    "sequelize": "6.20.0",
+    "^sequelize": "6.20.0",
     "uuid": "8.3.2",
     "@types/uuid": "8.3.4"
   },
