--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiple-transaction-manager/sequelize",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Multiple Transaction Manager Sequelize adapter",
   "main": "index.js",
   "types": "index.d.ts",
@@ -24,7 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@log4js-node/log4js-api": "1.0.2",
-    "multiple-transaction-manager": "1.0.1",
+    "multiple-transaction-manager": "~1.0.3",
     "sequelize": "^6.20.0",
     "uuid": "8.3.2",
     "@types/uuid": "8.3.4"
@@ -32,11 +32,14 @@
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
     "jest": "^28.1.0",
+    "log4js": "6.4.6",
+    "sqlite3": "5.0.8",
     "ts-jest": "^28.0.1",
     "tsc-hooks": "^1.1.1",
-    "typescript": "^4.6.4",
-    "log4js": "6.4.6",
-    "sqlite3": "5.0.8"
+    "typescript": "^4.7.4"
   }
 }
