--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@log4js-node/log4js-api": "1.0.2",
-    "multiple-transaction-manager": "~1.0.3",
+    "multiple-transaction-manager": "1.0.4",
     "sequelize": "^6.20.0",
     "uuid": "8.3.2",
     "@types/uuid": "8.3.4"
