--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@multiple-transaction-manager/sequelize",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Multiple Transaction Manager Sequelize adapter",
   "main": "index.js",
   "types": "index.d.ts",
@@ -24,14 +24,14 @@
   "license": "MIT",
   "dependencies": {
     "@log4js-node/log4js-api": "1.0.2",
-    "multiple-transaction-manager": "1.0.4",
+    "multiple-transaction-manager": "1.0.5",
     "sequelize": "^6.20.0",
     "uuid": "8.3.2",
     "@types/uuid": "8.3.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
-    "@types/node": "^17.0.31",
+    "@types/node": "18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
@@ -40,6 +40,6 @@
     "sqlite3": "5.0.8",
     "ts-jest": "^28.0.1",
     "tsc-hooks": "^1.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "4.9.3"
   }
 }
